Fixed Button behind div

--- a/quiz.css
+++ b/quiz.css
@@ -38,7 +38,11 @@ button{
 	border-radius: 3px;
 	padding: 20px;
 	cursor: pointer;
-	margin-bottom: 20px;
+  margin-bottom: 20px;
+  z-index: 9999;
+  position:relative;
+  margin-top:110px;
+  display:block;
 }
 button:hover{
 	background-color: #38a;
